# ray-tracing

./: .gitignore  CMakeLists.txt  README.md
include/renderer/: renderer.hpp  types.hpp
include/utils/: shader.hpp
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/camera/: camera.cpp  camera.hpp
src/renderer/: renderer.cpp
src/utils/: io.cpp  shader.cpp
